--- a/Liusse/Liusse.csproj
+++ b/Liusse/Liusse.csproj
@@ -6,4 +6,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CalcParse\CalcParse.csproj" />
+  </ItemGroup>
+
 </Project>
