--- a/Liusse/Liusse.csproj
+++ b/Liusse/Liusse.csproj
@@ -7,6 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="C:\Users\1162228\.nuget\packages\nlog.config\4.7.7\contentFiles\any\any\NLog.config" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="NLog" Version="4.7.7" />
+    <PackageReference Include="NLog.Config" Version="4.7.7" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\CalcParse\CalcParse.csproj" />
   </ItemGroup>
 
