--- a/Liusse/Liusse.csproj
+++ b/Liusse/Liusse.csproj
@@ -8,15 +8,21 @@
 
   <ItemGroup>
     <None Remove="C:\Users\1162228\.nuget\packages\nlog.config\4.7.7\contentFiles\any\any\NLog.config" />
+    <None Remove="C:\Users\1162228\.nuget\packages\nlog.config\4.7.8\contentFiles\any\any\NLog.config" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="NLog" Version="4.7.8" />
-    <PackageReference Include="NLog.Config" Version="4.7.8" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\CalcParse\CalcParse.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="NLog.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
