--- a/Liusse/Liusse.csproj
+++ b/Liusse/Liusse.csproj
@@ -6,6 +6,10 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DocumentationFile>D:\Work\Programming\Liusse\Liusse\Liusse.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <None Remove="C:\Users\1162228\.nuget\packages\nlog.config\4.7.7\contentFiles\any\any\NLog.config" />
     <None Remove="C:\Users\1162228\.nuget\packages\nlog.config\4.7.8\contentFiles\any\any\NLog.config" />
